package com.example.whereintheworld.data

data class ScoreEntry(
    val score: Int,
    val distance: Float,
    val timestamp: Long
)

